ajout weakness
